nav and contact button

--- a/index.html
+++ b/index.html
@@ -9,199 +9,57 @@
     <!--------------------------Device width identification---------------------------->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-------------------------CSS LINKS--------------------------->
     <link rel="stylesheet" href="Assets/css/normalize.css">
+    <link rel="stylesheet" href="Assets/css/style.css">
 
 
 </head>
+
 <body >
+    <header>
+        <div class="navigationbar">
+            <nav>
+                <ul>
+                    <li><a href="home">Home</a></li>
+                    <li><a href="about_me">About Me</a></li>
+                    <li><a href="skills">Skills</a></li>
+                    <li><a href="education">Education</a></li>
+                    <li><a href="projects">Projects</a></li>
+                    <li><a href="assignments">Assignments</a></li>
+                    <li><a href="gallary">Gallary</a></li>
+                    <li><a href="contact_me">Contact Me</a></li>
+                </ul>
+            </nav>
 
-<header>
+            <div>
+                <img src="Assets/images/Free_Sample_By_Wix%20(1).jfif" alt="" class="">
+            </div>
 
-    <div >
-
-        <nav>
-
-            <ul >
-                <li><a href="#home">Home</a></li>
-                <li><a href="#aboutMe">About Me</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#education">Education</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#gallary">Gallary</a></li>
-                <li><a href="#contactMe">Contact Me</a></li>
-
-            </ul>
-        </nav>
-        <div>
-            <img src="Assets/images/Free_Sample_By_Wix%20(1).jfif" >
-        </div>
-        <div>
-
-        </div>
-
-
-    </div>
-
-</header>
-
-<main >
-    <!--------------------------Home---------------------------->
-
-    <section >
-
-        <img alt="" src="Assets/images/BackGroundImage.png">
-        <p >HI</p><p >|</p>
-        <p>I'am Amila Wijethunga</p>
-
-
-
-    </section>
-
-    <!--------------------Contact Me Button------------------------->
-
-    <div>
-        <button type="submit">Contact Me</button>
-    </div>
-
-    <!--------------------------About Me---------------------------->
-
-    <section >
-
-        <img alt="" src="Assets/images/BackGroundImage.png">
-        <img alt="" src="Assets/images/aboutMeProfilePicture.jpg">
-
-        <div >
-
-            <h3>Personal</h3>
-
-            <ul>
-                <li>Amila Ravinga</li>
-                <li>Sri Lankan</li>
-                <li>+94719015336</li>
-                <li>amilaravinga@gmail.com</li>
-            </ul>
-
-            <h3>Volunteer</h3>
-
-            <ul>
-                <li>First-aider at St. John Ambulance Cadet Brigade</li>
-                <li>Active Union Member At Open University Student Union</li>
-            </ul>
-
-        </div>
-
-        <div>
-
-            <h1><span>Passion Makes </span> <br>&nbsp &nbsp&nbspDreams Perfect</h1>
-
-        </div>
-
-        <div >
-
-            <h3>About Me</h3>
-
-            <p>"I consider Myself as a highly focused,self-motivated,<br>
-                ambitious,hard-working and <br>
-                inquisitive individual but also a Nature Lover<br>
-                and ane who enjoys life.</p>
-
-        </div>
-
-        <div >
-
-            <button>Download CV <i ></i></i></button>
-            <button>Hire Me <i ></i></i></button>
-
-        </div>
-
-        <div >
-
-            <h3>Professional</h3>
-
-            <ul>
-                <li>1st Year Undergraduate Student at IJSE(Software Engineering)</li>
-                <li>3rd Year Undergraduate Student at Open University SriLanka(Electrical Engineering) </li>
-            </ul>
-
-        </div>
-
-    </section>
-
-    <!--------------------------Skills---------------------------->
-
-    <section >
-        <img alt="" src="Assets/images/BackGroundImage.png">
-
-        <div >
-            <h1>Skills</h1>
-        </div>
-
-        <div>
-            <p>0.7</p>
-            <p>Years of<br> Experience</p>
-        </div>
-
-        <div >
-            <p>5</p>
-            <p>Projects</p>
-        </div>
-
-        <div >
-            <p>1</p>
-            <p>Happy<br>Customer</p>
-        </div>
-
-        <div>
-
-            <div><img alt="" src="Assets/images/icons8_java_200px.png"></div>
-            <div><img alt="" src="Assets/images/icons8_mysql_logo_200px_1.png"></div>
-            <div><img alt="" src="Assets/images/icons8_html_5_200px.png"></div>
-            <div><img alt="" src="Assets/images/icons8_css3_200px.png"></div>
-            <div><img alt="" src="Assets/images/icons8_figma_200px.png"></div>
-            <div><img alt="" src="Assets/images/hibernate-icon.png"></div>
-        </div>
-
-        <div >
-            <div></div>
-            <div></div>
             <div></div>
         </div>
+    </header>
 
-
-    </section>
-
-    <!--------------------------Education---------------------------->
-
-    <section c>
-
+    <main >
+        <!-------------------------BACKGROUND IMAGE----------------------->
         <img alt="" src="Assets/images/BackGroundImage.png">
+        <!------------------------------------------------>
 
-    </section>
+        <!-------------------------CONTACT ME BUTTON----------------------->
+        <div>
+            <button type="submit">Contact Me</button>
+        </div>
+        <!------------------------------------------------>
 
-    <!--------------------------Projects---------------------------->
 
-    <section>
+        <!--------------------------Home---------------------------->
+        <section>
+            <p id="hi">HI</p> <p id="dash">|</p>
+            <p>I'am Amila Wijethunga</p>
+        </section>
+    </main>
 
-        <img alt="" src="Assets/images/BackGroundImage.png">
 
-    </section>
-
-    <!--------------------------gallary---------------------------->
-
-    <section >
-
-        <img alt="" src="Assets/images/BackGroundImage.png">
-
-    </section>
-
-    <!--------------------------Contact Me---------------------------->
-
-    <section >
-
-        <img alt="" src="Assets/images/BackGroundImage.png">
-
-    </section>
-</main>
 <!--------------------------Page footer---------------------------->
 
 <footer>
