about me starrt

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="navigationbar">
             <nav>
                 <ul>
-                    <li><a href="home">Home</a></li>
+                    <li><a href="#home">Home</a></li>
                     <li><a href="about_me">About Me</a></li>
                     <li><a href="skills">Skills</a></li>
                     <li><a href="education">Education</a></li>
@@ -52,12 +52,21 @@
         <!------------------------------------------------>
 
 
-        <!--------------------------Home---------------------------->
+        <!--------------------------Home----------------------------------->
         <section>
             <p id="hi">HI</p> <p id="dash">|</p>
-            <p>I'am Amila Wijethunga</p>
+            <p id="name">I'am Amila Wijethunga</p>
         </section>
+        <!------------------------------------------------>
+
+        <!--------------------------About me------------------------------->
+
+
+        <!------------------------------------------------>
+
     </main>
+
+
 
 
 <!--------------------------Page footer---------------------------->
